# festlang-svn

branches/devel2010/: configure.in
branches/devel2010/audio/: nas.cc
branches/devel2010/base_class/: rateconv.cc
branches/devel2010/festival/: README
branches/devel2010/include/: EST_ChannelType.h  EST_String.h
branches/devel2010/ling_class/: EST_relation_aux.cc
branches/devel2010/main/: epochs_main.cc
branches/devel2010/siod/: editline.c  slib_server.cc  slib_sys.cc
branches/devel2010/speech_class/: EST_wave_aux.cc
branches/devel2010/utils/: Makefile
branches/devel_speech_tools2010/speech_class/: EST_WaveFile.cc
branches/stable_2007/festvox/: .time-stamp
trunk/cstr_pl_em_diphone/: README
trunk/cstr_pl_em_diphone/festvox/: build_clunits.scm  build_intsing.scm  build_multisyn.scm  cstr_pl_accent_def.scm  cstr_pl_dur.scm  cstr_pl_em_clunits.scm  cstr_pl_em_diphone.scm  cstr_pl_em_dur.scm  cstr_pl_em_mbrola.scm  cstr_pl_em_multisyn.scm  cstr_pl_f0.scm  cstr_pl_int.scm  cstr_pl_intsint_f0.scm  cstr_pl_intsint_intonation.scm  cstr_pl_intsint_tree.scm  cstr_pl_lex.scm  cstr_pl_lts.scm  cstr_pl_number_decl.scm  cstr_pl_phones.scm  cstr_pl_plr.scm  cstr_pl_pointlr.scm  cstr_pl_tobi.scm  cstr_pl_tobi_f0.scm  cstr_pl_token.scm
trunk/cstr_pl_em_diphone/group/: cstr_pl_em_diphone.group
trunk/cstr_pl_em_diphone/mbrola-pl1/: pl1_phones
trunk/cstr_pl_em_diphone/test/: build-test.scm
trunk/festival/config/: project.mak  vc_config_make_rules-dist
trunk/festival/doc/: Makefile  doc.scm  festival.texi
trunk/festival/examples/: benchmark  benchmark.text  draw-cart-tree  dumpfeats.sh  durmeanstd.sh
trunk/festival/lib/: Makefile  festival.scm  init.scm  languages.scm  postlex.scm  voices.scm
trunk/festival/share/: Makefile  festival.scm  hts.scm  init.scm  languages.scm  lexicons.scm  lts.scm  lts_build.scm  sable-mode.scm  singing-mode.scm  soleml-mode.scm  voices.scm
trunk/festlex_cmu/: Makefile  cmu_lts_rules.scm  cmudict_extensions.scm
trunk/festvox/: .time-stamp  Makefile  README
trunk/festvox/config/: project.mak
trunk/festvox/docbook/: Makefile  bsv.sgml  corpus.sgml  stuff.ed
trunk/festvox/festvox.org/: contact_body.html  footer.html  index_body.html
trunk/festvox/html/: c180.html  c2174.html  c2236.html  c3230.html  c3300.html  c3303.html  c3641.html  c3651.html  c3654.html  c4334.html  c4339.html  c4342.html  index.html  p20.html  p3296.html  p3647.html  p710.html  x1003.html  x1170.html  x2245.html  x2338.html  x2354.html  x2463.html  x2498.html  x3240.html  x3266.html  x3293.html  x3791.html  x4259.html  x4265.html  x4331.html  x4405.html  x759.html
trunk/festvox/src/: Makefile
trunk/gnome-voice-control/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
trunk/gnome-voice-control/data/: GNOME_VoiceControlApplet.xml  GNOME_VoiceControlApplet_Factory.server.in.in  Makefile.am
trunk/gnome-voice-control/debian/: changelog  control  copyright
trunk/gnome-voice-control/help/: ChangeLog  Makefile.am  gnome-voice-control.omf.in
trunk/gnome-voice-control/help/C/: gnome-voice-control.xml
trunk/gnome-voice-control/help/en/: en.po
trunk/gnome-voice-control/help/es/: es.po
trunk/gnome-voice-control/include/julius/: acconfig.h  beam.h  callback.h  config.h  define.h  extern.h  global.h  graph.h  jconf.h  jfunc.h  julius.h  juliuslib.h  misc.h  multi-gram.h  plugin.h  recog.h  search.h  trellis.h  useropt.h  wchmm.h
trunk/gnome-voice-control/include/sent/: adin.h  config.h  dfa.h  hmm.h  hmm_calc.h  htk_defs.h  htk_hmm.h  htk_param.h  machines.h  mfcc.h  ngram2.h  ptree.h  speech.h  stddefs.h  tcpip.h  util.h  vocabulary.h
trunk/gnome-voice-control/lang/: Makefile.am  desktop-control-de.dict  desktop-control-en.dict  desktop-control-es.dict  desktop-control-ru.dict  desktop-control.dict  desktop-control.fsg
trunk/gnome-voice-control/lang/julius/: desktop-control.jconf
trunk/gnome-voice-control/lang/julius/hmm/: hmm-es  tiedlist-en
trunk/gnome-voice-control/lang/julius/lm/: desktop-control-en.dfa  desktop-control-en.dict  desktop-control-en.grammar  desktop-control-en.voca  desktop-control-es.grammar  desktop-control-es.voca  desktop-control-iw-es.dict
trunk/gnome-voice-control/lang/sphinx/: desktop-control-en.dict  desktop-control-es.dict  desktop-control-es.lm  desktop-control-ru.dict
trunk/gnome-voice-control/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ca.po  de.po  es.po  fr.po  it.po  nl.po  pt_BR.po  ru.po  sv.po
trunk/gnome-voice-control/src/: Makefile.am  action.c  action.h  asr.h  asrjulius.c  asrsphinx.c  gstsphinxsink.c  gstsphinxsink.h  sphinx2.diff  spi-listener.c  spi-listener.h  voice-control.c  voicecontrol.h
trunk/msu_ru_nsh_cg/: COPYING  README
trunk/msu_ru_nsh_cg/debian/: changelog  control  copyright  rules
trunk/msu_ru_nsh_cg/dict/: Makefile  missing  msu_ru_nsh_dict.scm  msu_ru_nsh_stress.tree  rgramtab.tab.modified  zaliz.c
trunk/msu_ru_nsh_cg/festvox/: build_clunits.scm  build_st.scm  clustergen_build.scm  msu_ru_nsh_cg.scm  msu_ru_nsh_clunits.scm  msu_ru_nsh_durdata.scm  msu_ru_nsh_durdata_cg.scm  msu_ru_nsh_f0.scm  msu_ru_nsh_f0model.scm  msu_ru_nsh_intonation.scm  msu_ru_nsh_lexicon.scm  msu_ru_nsh_phoneset.scm  msu_ru_nsh_phrasing.scm  msu_ru_nsh_statenames.scm  msu_ru_nsh_tagger.scm  msu_ru_nsh_tokenizer.scm
trunk/msu_ru_nsh_cg/lib/: clustergen.scm
trunk/multilts/asterisk-ru-taxi/: README.txt  dict  sphinx-netclient.pl  sphinx-netserver.pl  test.gram  ufa-streets.gram
trunk/multilts/diphone-selection/: build.sh  frequent-clusters  selected-clusters
trunk/multilts/en-names/: names.list
trunk/multilts/multilts-code/: G2P.c  G2P.h  Makefile  README  RESULT  Srv_Param.h  cart.c  cart.h  cmu_cart.c  cmu_cart.h  cmu_lts_model_english.c  cmu_lts_model_english.h  cmu_lts_model_russian.c  cmu_lts_model_russian.h  cmu_lts_model_spanish.c  cmu_lts_model_spanish.h  cmu_lts_rules_english.c  cmu_lts_rules_russian.c  cmu_lts_rules_spanish.c  cmu_values.c  cst_lts.h  lts.c  lts.h  lts_int.h  lts_main.c  (+2 more)
trunk/speech_tools/: .time-stamp  configure  configure.in
(+636 files in other folders)
